example templates using context from config.yaml

--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rabbitfish Example Project</title>
+    <title>{{ name }}</title>
   </head>
   <body>
     {% block content %}{% endblock %}
