--- a/documentation/templates/base.html
+++ b/documentation/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ name }}</title>
+    <title>{{ title }}</title>
   </head>
   <body>
     {% block content %}{% endblock %}
