wrote actual documentation as RabbitFish site

--- a/documentation/templates/base.html
+++ b/documentation/templates/base.html
@@ -4,6 +4,8 @@
     <title>{{ title }}</title>
   </head>
   <body>
+    <h1>RabbitFish</h1>
+    <h2>a static site generator</h2>
     {% block content %}{% endblock %}
   </body>
 </html>
